syntax = "proto3";

package nodecom;

service NodeCom {
  rpc SubmitNonce(SubmitNonceRequest) returns (SubmitNonceReply) {}
}

message SubmitNonceReply {}

message SubmitNonceRequest {
  uint64 accountID = 1;
  uint64 nonce = 2;
  uint64 deadline = 3;
  uint64 blockHeight = 4;
  uint64 baseTarget = 5;
  string genSig = 6;
}